chore: add IntelliJ run configs and dev launcher for fast iteration
- Add 7 IntelliJ run configurations for various launch scenarios
- Add bin/devKomet.sh workspace-aware dev launcher script
- Add dev-config section to workspace.yaml with JVM args
- Document fast incremental development workflow in README

The devKomet.sh script enables second-scale edit-run cycles by:
- Building module path from target/classes for workspace modules
- Using staged JARs for external dependencies
- Supporting debug and profile variants

This replaces the multi-minute mvn verify cycle for day-to-day development.